# base-locust-load-test

./: .env  .gitignore  .ruff.toml  README.md  docker-compose.yml  locustfile.py  mock_variables.env  pyproject.toml  requirements.txt
.githooks/: pre-push
scripts/: code_checkers.sh
tests/: __init__.py  base.py  load.py  soak.py  spike.py  stress.py
